chore: add version

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = multirepo
-version = 1.0.0
+version = attr: src.__version__
 author = Marcello De Giorgi
 author_email = degiorgimarcello@gmail.com
 description = CLI to manage multiple git repositories in the same folder
