fix: version file and setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = multirepo
-version = attr: src.__version__
+name = multirepo-manager
+version = attr: src.version.__version__
 author = Marcello De Giorgi
 author_email = degiorgimarcello@gmail.com
 description = CLI to manage multiple git repositories in the same folder
