--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ author = Marcello De Giorgi
 author_email = degiorgimarcello@gmail.com
 description = CLI to manage multiple git repositories in the same folder
 url = https://github.com/DeGiorgiMarcello/multirepo-manager
-long_description = README.md
+long_description = file: README.md
 long_description_content_type = text/markdown
 
 [options]
